# simplPerp

./: Cargo.toml  README.md
.terminal-perps/: state.json
src/: app.rs  events.rs  main.rs  persistence.rs  user.rs
src/engine/: candles.rs  funding.rs  liquidator.rs  market.rs  matcher.rs  mod.rs  oracle.rs  orderbook.rs  simulator.rs
src/ui/: account.rs  chart.rs  history.rs  market.rs  mod.rs  positions.rs  theme.rs  trade.rs
